bin_PROGRAMS = $(top_builddir)/liftoff

__top_builddir__liftoff_CPPFLAGS = $(CPPFLAGS)
__top_builddir__liftoff_LDFLAGS = $(LIBS)
__top_builddir__liftoff_SOURCES = \
    functions.cpp \
    configuration.cpp \
    state.cpp \
    view.cpp \
    object.cpp \
    audio.cpp \
    message.cpp \
    shader.cpp \
    quad.cpp \
    font.cpp \
    texture.cpp \
    model.cpp \
    particles.cpp \
    framebuffer.cpp \
    renderbuffer.cpp \
    entities/entity.cpp \
    entities/asteroid.cpp \
    entities/cargo.cpp \
    entities/debris.cpp \
    entities/explosion.cpp \
    entities/missile.cpp \
    entities/player.cpp \
    entities/powerup.cpp \
    skybox.cpp \
    overlay.cpp \
    scene.cpp \
    engine.cpp \
    main.cpp
