bin_PROGRAMS = $(top_builddir)/liftoff

__top_builddir__liftoff_CPPFLAGS = $(CPPFLAGS)
__top_builddir__liftoff_LDFLAGS = $(LIBS)
__top_builddir__liftoff_SOURCES = \
    resources/font.cpp \
    resources/object.cpp \
    resources/shader.cpp \
    resources/texture.cpp \
    entities/entity.cpp \
    entities/asteroid.cpp \
    entities/cargo.cpp \
    entities/debris.cpp \
    entities/explosion.cpp \
    entities/missile.cpp \
    entities/player.cpp \
    entities/powerup.cpp \
    audio.cpp \
    configuration.cpp \
    engine.cpp \
    framebuffer.cpp \
    functions.cpp \
    input.cpp \
    main.cpp \
    message.cpp \
    model.cpp \
    overlay.cpp \
    particle.cpp \
    quad.cpp \
    renderbuffer.cpp \
    scene.cpp \
    skybox.cpp \
    state.cpp \
    view.cpp
